--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,67 +1,73 @@
 .App {
-  text-align: center;
+    text-align: center;
 }
 
 .App-logo {
-  height: 40vmin;
-  pointer-events: none;
+    height: 40vmin;
+    pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+    .App-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
 
 .App-link {
-  color: #61dafb;
+    color: #61dafb;
 }
+
 :root {
-  --mainDark: #343a40;
-  --mainGray: rgba(109, 109, 109);
-  --mainLightGray: rgba(172, 172, 172);
-  --mainWhite: #fff;
-  --mainBlue: #007bff;
-}
-html{
-  height: 100%;
+    --mainDark: #343a40;
+    --mainGray: rgba(109, 109, 109);
+    --mainLightGray: rgba(172, 172, 172);
+    --mainWhite: #fff;
+    --mainBlue: #007bff;
 }
 
-body{
-  height: 100%;
+html {
+    height: 100%;
 }
 
-.main-container{
-  height: 100%;
+body {
+    height: 100%;
 }
 
-.flex-container{
-  display: flex;
+.navbar-brand {
+    width: 30px;
+}
+
+.main-container {
+    height: 100%;
+}
+
+.flex-container {
+    display: flex;
     flex-direction: column;
     min-height: 100%;
 }
 
 .content {
-  flex: 1 1 auto;
+    flex: 1 1 auto;
 }
 
 
 @keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
