--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -44,6 +44,21 @@ body {
     height: 100%;
 }
 
+table {
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+td {
+    padding-left: 15px;
+    margin-left: 10px;
+}
+
+th {
+    margin-left:5px;
+    padding-left: 10px;
+}
+
 .navbar-brand {
     width: 30px;
 }
