--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -63,6 +63,10 @@ th {
     width: 30px;
 }
 
+.fa-solid{
+    padding-right: 10px;
+}
+
 .main-container {
     height: 100%;
 }
@@ -75,6 +79,7 @@ th {
 
 .content {
     flex: 1 1 auto;
+        background-color: lightgray;
 }
 
 
